--- a/src/components/QuestionDrawer/QuestionDrawer.css
+++ b/src/components/QuestionDrawer/QuestionDrawer.css
@@ -7,7 +7,7 @@
     width: 45%;
     min-width: 600px;
     z-index: 200;
-    box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5);
+    /* box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5); */ /* SAGE: too noticable */
     transform: translateX(100%);
     transition: transform 0.3s ease-out;
     overflow-y: auto;
