changed secondary color to SAGE's

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ code {
 :root {
     --primary-1: #a61e7b;
     /* Buttons */
-    --primary-2: #006d84;
+    --primary-2: #317eac;
     /* Header color 006D84 */
     --color-base-1: #ffffff;
     /* Box color */
