--- a/src/components/Btn/Btn.css
+++ b/src/components/Btn/Btn.css
@@ -1,6 +1,6 @@
 .regular-btn {
-    box-sizing: border-box;
-    line-height: 20px;
+    /* box-sizing: border-box;
+    line-height: 1.5;
     position: relative;
     display: inline-block;
     font-weight: 600;
@@ -17,11 +17,29 @@
     user-select: none;
     -ms-touch-action: manipulation;
     touch-action: manipulation;
-    padding: 8px 12px;
-    border-radius: 24px;
+    padding: 0.375rem 0.75rem;
+    border-radius: 0.25rem;
     color: white;
     background: none;
+    border: 1px solid transparent; */
+    display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
     border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    
 }
 
 .regular-btn:hover {
@@ -30,7 +48,7 @@
 
 #btn-blue {
     font-weight: 600;
-    background-color: #2a69ac;
+    background-color: #337ab7;
     border-radius: 25px;
     height: 45px;
     width: 130px;
@@ -39,7 +57,8 @@
 }
 
 .regular-btn.primary {
-    background: #2a69ac;
+    background: #337ab7;
+    border-color: #2e6da4;
     color: white;
 }
 
